# ML-algorithms-from-scratch

./: LICENSE  pyproject.toml
PCA/: pca_from_scratch.ipynb  pca_from_scratch.md
