[project]
name = "ml-algorithms-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "nbformat>=4.2.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
]
